@@ -133,7 +133,9 @@ X(onehot)
 X(P)
 X(parallel_case)
 X(parameter)
+X(PORTID)
 X(PRIORITY)
+X(PRIORITY_MASK)
 X(Q)
 X(qwp_position)
 X(R)
@@ -144,6 +146,7 @@ X(RD_CLK_POLARITY)
 X(RD_DATA)
 X(RD_EN)
 X(RD_PORTS)
+X(RD_TRANSPARENCY_MASK)
 X(RD_TRANSPARENT)
 X(reg)
 X(S)
@@ -195,6 +198,7 @@ X(T_LIMIT_TYP)
 X(to_delete)
 X(top)
 X(TRANS_NUM)
+X(TRANSPARENCY_MASK)
 X(TRANSPARENT)
 X(TRANS_TABLE)
 X(T_RISE_MAX)
@@ -220,6 +224,7 @@ X(WR_CLK_POLARITY)
 X(WR_DATA)
 X(WR_EN)
 X(WR_PORTS)
+X(WR_PRIORITY_MASK)
 X(X)
 X(Y)
 X(Y_WIDTH)
