@@ -71,7 +71,7 @@ void Mem::emit() {
 		cell->parameters[ID::RD_PORTS] = Const(GetSize(rd_ports));
 		cell->parameters[ID::WR_PORTS] = Const(GetSize(wr_ports));
 		Const rd_clk_enable, rd_clk_polarity, rd_transparent;
-		Const wr_clk_enable, wr_clk_polarity;
+		Const wr_clk_enable, wr_clk_polarity, wr_priority_mask;
 		SigSpec rd_clk, rd_en, rd_addr, rd_data;
 		SigSpec wr_clk, wr_en, wr_addr, wr_data;
 		int abits = 0;
@@ -118,6 +118,8 @@ void Mem::emit() {
 			}
 			wr_clk_enable.bits.push_back(State(port.clk_enable));
 			wr_clk_polarity.bits.push_back(State(port.clk_polarity));
+			for (bool bit : port.priority_mask)
+				wr_priority_mask.bits.push_back(State(bit));
 			wr_clk.append(port.clk);
 			log_assert(GetSize(port.clk) == 1);
 			wr_en.append(port.en);
@@ -132,9 +134,11 @@ void Mem::emit() {
 		if (wr_ports.empty()) {
 			wr_clk_enable = State::S0;
 			wr_clk_polarity = State::S0;
+			wr_priority_mask = State::S0;
 		}
 		cell->parameters[ID::WR_CLK_ENABLE] = wr_clk_enable;
 		cell->parameters[ID::WR_CLK_POLARITY] = wr_clk_polarity;
+		cell->parameters[ID::WR_PRIORITY_MASK] = wr_priority_mask;
 		cell->setPort(ID::WR_CLK, wr_clk);
 		cell->setPort(ID::WR_EN, wr_en);
 		cell->setPort(ID::WR_ADDR, wr_addr);
@@ -184,7 +188,8 @@ void Mem::emit() {
 			port.cell->parameters[ID::WIDTH] = width;
 			port.cell->parameters[ID::CLK_ENABLE] = port.clk_enable;
 			port.cell->parameters[ID::CLK_POLARITY] = port.clk_polarity;
-			port.cell->parameters[ID::PRIORITY] = idx++;
+			port.cell->parameters[ID::PORTID] = idx++;
+			port.cell->parameters[ID::PRIORITY_MASK] = port.priority_mask;
 			port.cell->setPort(ID::CLK, port.clk);
 			port.cell->setPort(ID::EN, port.en);
 			port.cell->setPort(ID::ADDR, port.addr);
@@ -210,6 +215,9 @@ void Mem::remove_wr_port(int idx) {
 		module->remove(wr_ports[idx].cell);
 	}
 	wr_ports.erase(wr_ports.begin() + idx);
+	for (auto &port: wr_ports) {
+		port.priority_mask.erase(port.priority_mask.begin() + idx);
+	}
 }
 
 void Mem::remove_rd_port(int idx) {
@@ -287,11 +295,20 @@ namespace {
 				mwr.en = cell->getPort(ID::EN);
 				mwr.addr = cell->getPort(ID::ADDR);
 				mwr.data = cell->getPort(ID::DATA);
-				ports.push_back(std::make_pair(cell->parameters.at(ID::PRIORITY).as_int(), mwr));
+				ports.push_back(std::make_pair(cell->parameters.at(ID::PORTID).as_int(), mwr));
 			}
 			std::sort(ports.begin(), ports.end(), [](const std::pair<int, MemWr> &a, const std::pair<int, MemWr> &b) { return a.first < b.first; });
 			for (auto &it : ports)
 				res.wr_ports.push_back(it.second);
+			for (auto &port : res.wr_ports) {
+				Const orig_prio_mask = port.cell->parameters.at(ID::PRIORITY_MASK);
+				for (int i = 0; i < GetSize(res.wr_ports); i++) {
+					auto &other_port = res.wr_ports[i];
+					int other_portid = other_port.cell->parameters.at(ID::PORTID).as_int();
+					bool has_prio = other_portid < GetSize(orig_prio_mask) && orig_prio_mask[other_portid] == State::S1;
+					port.priority_mask.push_back(has_prio);
+				}
+			}
 		}
 		if (index.inits.count(mem->name)) {
 			std::vector<std::pair<int, MemInit>> inits;
@@ -359,10 +376,14 @@ namespace {
 			mrd.data = cell->getPort(ID::RD_DATA).extract(i * res.width, res.width);
 			res.rd_ports.push_back(mrd);
 		}
-		for (int i = 0; i < cell->parameters.at(ID::WR_PORTS).as_int(); i++) {
+		int n_wr_ports = cell->parameters.at(ID::WR_PORTS).as_int();
+		for (int i = 0; i < n_wr_ports; i++) {
 			MemWr mwr;
 			mwr.clk_enable = cell->parameters.at(ID::WR_CLK_ENABLE).extract(i, 1).as_bool();
 			mwr.clk_polarity = cell->parameters.at(ID::WR_CLK_POLARITY).extract(i, 1).as_bool();
+			mwr.priority_mask.resize(n_wr_ports);
+			for (int j = 0; j < n_wr_ports; j++)
+				mwr.priority_mask[j] = cell->parameters.at(ID::WR_PRIORITY_MASK).extract(i * n_wr_ports + j, 1).as_bool();
 			mwr.clk = cell->getPort(ID::WR_CLK).extract(i, 1);
 			mwr.en = cell->getPort(ID::WR_EN).extract(i * res.width, res.width);
 			mwr.addr = cell->getPort(ID::WR_ADDR).extract(i * abits, abits);
